--- a/aquam25lock/index.html
+++ b/aquam25lock/index.html
@@ -19,7 +19,7 @@
     <div class="section">
         <label for="publicKey">Public Key:</label><br>
         <input id="publicKey" type="text" size="56" placeholder="Enter your Stellar public key" />
-        <button id="getBalanceBtn">Get AQUAm25 Balance</button>
+        <button id="getBalanceBtn">Refresh Balance</button>
         <p>Balance: <span id="balance">-</span></p>
     </div>
     <div class="section">
@@ -28,6 +28,7 @@
     </div>
     <div class="section">
         <button id="buildBtn">Build XDR</button>
+        <button id="copyBtn" disabled>Copy XDR</button>
     </div>
     <p>This will lock your AQUAm25 tokens for 3 years into a claimable balance.</p>
     <div class="section">
@@ -42,22 +43,46 @@
         // Temporary tracker key for testing
         const TRACKER_KEY = 'GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP';
 
+        const publicKeyInput = document.getElementById('publicKey');
+        const balanceEl = document.getElementById('balance');
+        const getBalanceBtn = document.getElementById('getBalanceBtn');
+        const buildBtn = document.getElementById('buildBtn');
+        const copyBtn = document.getElementById('copyBtn');
+        const xdrEl = document.getElementById('xdr');
+        const lockInfoEl = document.getElementById('lockInfo');
+
+        // Fetch balance when public key changes or button clicked
+        publicKeyInput.addEventListener('change', fetchBalance);
+        getBalanceBtn.addEventListener('click', fetchBalance);
+
         async function fetchBalance() {
-            const pubKey = document.getElementById('publicKey').value.trim();
-            document.getElementById('balance').innerText = 'Fetching...';
+            const pubKey = publicKeyInput.value.trim();
+            if (!pubKey) return;
+            balanceEl.textContent = 'Fetching...';
             try {
                 const account = await server.loadAccount(pubKey);
                 const bal = account.balances.find(b => b.asset_code === 'AQUAm25' && b.asset_issuer === AQUA_ASSET.issuer);
-                document.getElementById('balance').innerText = bal ? bal.balance : '0';
+                balanceEl.textContent = bal ? bal.balance : '0';
             } catch (err) {
                 console.error(err);
-                document.getElementById('balance').innerText = 'Error fetching balance';
+                balanceEl.textContent = 'Error';
             }
         }
 
+        buildBtn.addEventListener('click', buildXDR);
+        copyBtn.addEventListener('click', () => {
+            const xdrText = xdrEl.value;
+            if (!xdrText) return;
+            navigator.clipboard.writeText(xdrText).then(() => {
+                copyBtn.textContent = 'Copied!';
+                setTimeout(() => copyBtn.textContent = 'Copy XDR', 2000);
+            });
+        });
+
         async function buildXDR() {
-            const pubKey = document.getElementById('publicKey').value.trim();
+            const pubKey = publicKeyInput.value.trim();
             const amount = document.getElementById('amount').value;
+            if (!pubKey || !amount) return alert('Please enter both public key and amount.');
             try {
                 const sourceAccount = await server.loadAccount(pubKey);
 
@@ -67,9 +92,9 @@
                 endDate.setFullYear(endDate.getFullYear() + 3);
                 const lockTimestamp = Math.floor(endDate.getTime() / 1000).toString();
 
-                // Display human-readable lock info
-                document.getElementById('lockInfo').innerText =
-                    `Lock start: ${startDate.toISOString()}\nLock end:   ${endDate.toISOString()}`;
+                // Display human-friendly dates
+                lockInfoEl.textContent =
+                    `Lock start: ${startDate.toLocaleString()}\nLock end:   ${endDate.toLocaleString()}`;
 
                 // Create claimants: user after lock, tracker never
                 const claimants = [
@@ -97,15 +122,13 @@
                 .setTimeout(180)
                 .build();
 
-                document.getElementById('xdr').value = tx.toXDR();
+                xdrEl.value = tx.toXDR();
+                copyBtn.disabled = false;
             } catch (err) {
                 console.error(err);
                 alert('Error building XDR: ' + err.message);
             }
         }
-
-        document.getElementById('getBalanceBtn').addEventListener('click', fetchBalance);
-        document.getElementById('buildBtn').addEventListener('click', buildXDR);
     </script>
 </body>
 </html>
